--- a/lib/pdsc_server_web/templates/layout/app.html.eex
+++ b/lib/pdsc_server_web/templates/layout/app.html.eex
@@ -1,2 +1,3 @@
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
 <%= render @view_module, @view_template, assigns %>
