--- a/assets/src/index.ejs
+++ b/assets/src/index.ejs
@@ -18,13 +18,13 @@
   <link rel="manifest" href="/static/img/manifest.json">
   <!-- <meta name="msapplication-TileColor" content="#ffffff"> -->
   <meta name="msapplication-TileImage" content="/static/img/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+  <!-- <meta name="theme-color" content="#ffffff"> -->
   <meta charset="UTF-8">
   <meta name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="theme-color" content="#2196f3">
+  <!-- <meta name="theme-color" content="#2196f3"> -->
   <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap:">
   <title>My App</title>
   <!-- built style files will be auto injected -->
