--- a/assets/src/index.ejs
+++ b/assets/src/index.ejs
@@ -26,6 +26,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <!-- <meta name="theme-color" content="#2196f3"> -->
   <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap:">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
   <title>My App</title>
   <!-- built style files will be auto injected -->
   <!-- <style>
@@ -42,6 +44,7 @@
 
 <body id="ancho">
   <div id="app"></div>
+  
   <!-- built script files will be auto injected -->
   <% if (htmlWebpackPlugin.options.platform) { %>
   <script type="text/javascript"
